<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">随知</string>
    <string name="desc_image">Image</string>
    <string name="repeat_login">您的账号已在其他设备上登录</string>
    <string name="sz_introduce">随知是北京创世泰克科技股份有限公司自主研发的、以版权保护为己任的数字内容交易平台，着力于原创数字内容的“有价分享、按份交易”，任何消费者都可以使用随知客户端。\n</string>
    <string name="sz_info">关于随知</string>
    <string name="sz_company">北京创世泰克科技股份有限公司 版权所有</string>
    <string name="sz_copyright">Copyright©2014</string>
    <string name="sz_phone">010-82800223</string>
    <string name="sz_phone_label">电话：%1$s</string>
    <string name="sz_address">http://www.suizhi.com</string>
    <string name="sz_address_label">官网：%1$s</string>
    <string name="Connecting">连接中&#8230;</string>
    <string name="Parsering">正在解析</string>
    <string name="Packaging">正在打包</string>
    <string name="Waiting">等待下载</string>
    <string name="Downloading">正在下载&#8230;</string>
    <string name="unDownloaded">未下载</string>
    <string name="Being_parsed">正在解析请稍后再关闭</string>
    <string name="Pause">暂停</string>
    <string name="Pause_download">暂停下载</string>
    <string name="Fail">下载异常</string>
    <string name="No_download">未下载</string>
    <string name="Connect_fail">连接失败</string>
    <string name="tip_title">提 示</string>
    <string name="network_is_not_available">网络无连接</string>
    <string name="connect_net_download">暂无内容，可连网去下载</string>
    <string name="delete_localfile_success">成功删除本地文件!</string>
    <string name="now_delete_item">正在删除&#8230;</string>
    <string name="xml_dialog_delete_positive">确定</string>
    <string name="xml_dialog_delete_negative">取消</string>
    <string name="net_unavailable">网络连接不可用，请检查网络设置</string>
    <string name="net_unavailable_refresh">网络不给力，请尝试下拉刷新</string>
    <string name="net_subType_s">当前使用%1$s网络</string>
    <string name="xml_dialog_delete_info">您确定要退出吗?</string>
    <string name="menu_settings">Settings</string>
    <string name="shuffle_none">随机播放已关闭</string>
    <string name="shuffle">随机播放已打开</string>
    <string name="repeat_none">重复播放已关闭</string>
    <string name="repeat_current">重复播放当前歌曲</string>
    <string name="repeat_all">重复播放所有歌曲</string>
    <string name="app_menu_surelogout">确定退出程序吗？</string>
    <string name="load_ing">加载中…</string>
    <string name="choose_value">选择值</string>
    <string name="cannot_open_buffer">无法打开缓冲器</string>
    <string name="cannot_open_document">无法打开文档</string>
    <string name="cannot_open_file_Path">无法打开文件：%1$s</string>
    <string name="vitamio_videoview_error_title">Cannot play video</string>
    <string name="vitamio_videoview_error_button">OK</string>
    <string name="vitamio_videoview_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to
	this device.</string>
    <string name="vitamio_videoview_error_text_unknown">Sorry, this video cannot be played.</string>
    <string name="msg_camera_framework_bug">抱歉，相机初始化出现了问题，请尝试重置相机设置或重启设备.</string>
    <string name="button_ok">OK</string>
    <string name="dismiss">解除</string>
    <string name="document_has_changes_save_them_">文档已变更，保存变更吗？</string>
    <string name="fill_out_text_field">填充文本字段</string>
    <string name="no_further_occurrences_found">未发现更多实例。</string>
    <string name="no_text_selected">未选择文本</string>
    <string name="not_supported">不被支持</string>
    <string name="nothing_to_save">没有要保存的内容</string>
    <string name="update">更新</string>
    <string name="okay">确定</string>
    <string name="buffering">buffering</string>
    <string name="outline_title">目录</string>
    <string name="parent_directory">[向上一级]</string>
    <string name="print">打印</string>
    <string name="print_failed">未能打印</string>
    <string name="search">搜索</string>
    <string name="close">关闭</string>
    <string name="search_backwards">向后搜索</string>
    <string name="search_document">搜索文档</string>
    <string name="search_forwards">向前搜索</string>
    <string name="searching_">正在搜索…</string>
    <string name="select_text">选择文本</string>
    <string name="strike_out">删除线</string>
    <string name="text_not_found">未发现文本</string>
    <string name="toggle_links">高亮并启用墨迹</string>
    <string name="underline">下划线</string>
    <string name="no">否</string>
    <string name="yes">是</string>
    <string name="disable_sd_card">无可用SD卡</string>
    <string name="disable_sd_card_tip">无可用SD卡，请插入或连接SD卡</string>
    <string name="disable_sd_card_not_download">SD卡不可用，可能无法正常下载或使用设备</string>
    <string name="category_book">图书</string>
    <string name="category_music">音乐</string>
    <string name="category_video">视频</string>
    <string name="category_picture">图片</string>
    <string name="category_document">文档</string>
    <string name="category_zip">压缩包</string>
    <string name="category_apk">安装包</string>
    <string name="category_all">所有</string>
    <string name="category_other">其它</string>
    <string name="fail_to_create_folder">创建文件夹失败，文件夹已存在。</string>
    <string name="fail_to_rename">重命名失败失败，可能使用该名称的文件或文件夹已存在。</string>
    <string name="fail_to_open_file">文件不存在或已被移除，请尝试清除缓存，重新下载后打开。</string>
    <string name="no_file">没有文件</string>
    <string name="multi_select_title">已选择
 <xliff:g id="number">%1$s</xliff:g>         个
</string>
    <string name="operation_rename_message">请输入新名称</string>
    <string name="operation_create_folder_message">请输入文件夹名称</string>
    <string name="operation_delete_confirm_message">确认删除?</string>
    <string name="operation_create_folder">新建文件夹</string>
    <string name="operation_paste">粘贴</string>
    <string name="operation_move">剪切</string>
    <string name="operation_rename">重命名</string>
    <string name="operation_delete">删除</string>
    <string name="operation_info">详情</string>
    <string name="operation_cancel">取消</string>
    <string name="operation_refresh">刷新</string>
    <string name="operation_selectall">全选</string>
    <string name="operation_cancel_selectall">取消全选</string>
    <string name="operation_show_sys">显示点文件和隐藏文件</string>
    <string name="confirm_know">知道了</string>
    <string name="operation_hide_sys">隐藏点文件和隐藏文件</string>
    <string name="copy">复制</string>
    <string name="copy_to_clip">已复制到剪贴板</string>
    <string name="scanning_result">扫描结果</string>
    <string name="scanning_empty">扫描信息为空</string>
    <string name="file_size">%d 字节</string>
    <string name="loading">后台处理中…</string>
    <string name="file_info_location">位置:</string>
    <string name="file_info_size">大小:</string>
    <string name="file_info_modified">时间:</string>
    <string name="file_info_canread">可读:</string>
    <string name="file_info_canwrite">可写:</string>
    <string name="file_info_ishidden">隐藏:</string>
    <string name="menu_item_sort">排序</string>
    <string name="menu_item_sort_name">名称</string>
    <string name="menu_item_sort_size">大小</string>
    <string name="menu_item_sort_date">时间</string>
    <string name="menu_item_sort_type">类型</string>
    <string name="menu_setting">设置</string>
    <string name="menu_exit">退出</string>
    <string name="dialog_select_type">选择文件类型</string>
    <string name="dialog_type_text">文本</string>
    <string name="dialog_type_audio">音频</string>
    <string name="dialog_type_video">视频</string>
    <string name="dialog_type_image">图像</string>
    <string name="default_primary_folder">/mnt/sdcard</string>
    <string name="sd_folder">SD card</string>
    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很抱歉，应用程序出现错误，即将退出。\n请提交错误报告，我们会尽快修复这个问题！</string>
    <string name="submit_report">提交报告</string>
    <string name="i_known">我知道了</string>
    <string name="to_look">去看看</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="open">打开</string>
    <string name="download">下载</string>
    <string name="download_all">全部下载</string>
    <string name="download_cancel">全部取消</string>
    <string name="the_last_page">亲，已经是最后一页了~</string>
    <string name="the_latest_purchase">最新购买</string>
    <string name="recently_read">最近阅读</string>
    <string name="over_time">已过期</string>
    <string name="forever_time">永久有效</string>
    <string name="deadline_time">%1$s	到期</string>
    <string name="app_exit">再按一次返回键将退出</string>
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="xml_parser_failed">数据解析异常</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="please_waiting">请稍候&#8230;</string>
    <string name="link_exception_error">下载链接错误,请稍后重试！</string>
    <string name="connect_file_server_error">连接文件服务器失败！</string>
    <string name="connect_server_error">连接服务器失败，请重试！</string>
    <string name="http_status_code_error">网络异常</string>
    <string name="http_exception_error">网络异常，请求超时</string>
    <string name="socket_exception_error">网络异常，读取数据超时</string>
    <string name="register_device_fail">注册设备失败</string>
    <string name="app_run_code_error">应用程序运行时异常</string>
    <string name="net_disconnected">网络未连接</string>
    <string name="msg_file_not_find">文件没有找到</string>
    <string name="msg_ftp_error">文件服务器异常</string>
    <string name="msg_cipher_error">文件有误，解密文件异常</string>
    <string name="msg_download_up">到达最大下载数</string>
    <string name="msg_oom_error">内存空间不足</string>
    <string name="msg_insert_error">本地专辑信息存储失败</string>
    <string name="load_data_null">暂无数据</string>
    <string name="load_data_null_again">暂无数据，点击重试</string>
    <string name="load_more">加载更多</string>
    <string name="tab_local">本地</string>
    <string name="tab_remote">远程</string>
    <string name="download_pause">暂停</string>
    <string name="download_underway">下载中, 请稍候…</string>
    <string name="download_success">下载成功</string>
    <string name="account_email">%1$s@%2$s.com</string>
    <string name="account_cache">%1$s</string>
    <string name="account_version">%1$s</string>
    <string name="account_cache_info">确定清理所有已下载专辑</string>
    <string name="book_count">%1$s本图书</string>
    <string name="music_count">%1$s首音乐</string>
    <string name="video_count">%1$s个视频</string>
    <string name="login_title">随知登录</string>
    <string name="login_account">账号:</string>
    <string name="login_password">密码:</string>
    <string name="login_hint_account">请输入注册邮箱/手机号</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="login_rememember_me">    记住我，自动登录</string>
    <string name="login_others">其他方式登录</string>
    <string name="loginout_ask_now">注销当前登录的账户?</string>
    <string name="loginout_can_reload">注销后可重新登录</string>
    <string name="username_tip">账号</string>
    <string name="password_tip">密码</string>
    <string name="login">登 录</string>
    <string name="logout">注 销</string>
    <string name="weChat_login">微信快速登录</string>
    <string name="QQ_login">QQ快速登录</string>
    <string name="sz_login">账号登录</string>
    <string name="sz_register">账号注册</string>
    <string name="logining">登录中</string>
    <string name="login_fail">登录失败</string>
    <string name="login_lose_efficacy">登录已失效~</string>
    <string name="login_fail_disconnected">登录失败,无法连接服务器~</string>
    <string name="login_ing">正在登录…</string>
    <string name="scanning_sweep">扫一扫</string>
    <string name="msg_login_fail">登录失败,请检查用户名或密码</string>
    <string name="msg_login_username_null">账号不能为空</string>
    <string name="edit_bookmarks">编辑书签</string>
    <string name="update_app_now">立即升级</string>
    <string name="update_app_later">以后再说</string>
    <string name="version_update_new">亲，随知有新版本更新了，为了更好的体验，请耐心升级到最新版！</string>
    <string name="version_wifi_update_tips">建议在wifi条件下更新</string>
    <string name="pay_select_way">请选择支付方式</string>
    <string name="pay_we_chat">微信</string>
    <string name="pay_ali_pay">支付宝</string>
    <string name="share_to_qq">QQ分享</string>
    <string name="share_to_qzone">QQ空间</string>
    <string name="share_to_wechat">微信分享</string>
    <string name="share_to_wechat_friends">朋友圈</string>
    <string name="share_to_sina_weibo">新浪微博</string>
    <string name="share_to_link">复制链接</string>
</resources>