<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="用户信息" >
        <Preference
            android:key="account"
            android:layout="@layout/preference"
            android:summary="@string/account_email"
            android:title="帐号" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="缓存设置" >
        <Preference
            android:defaultValue="0k"
            android:key="cache"
            android:layout="@layout/preference"
            android:summary="@string/account_cache"
            android:title="清除缓存" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="其他ss" >
        <Preference
            android:defaultValue="1.0"
            android:key="update"
            android:layout="@layout/preference"
            android:summary="@string/account_version"
            android:title="新版本检测" />
        <Preference
            android:key="about"
            android:layout="@layout/preference"
            android:title="关于我们" />
    </PreferenceCategory>

</PreferenceScreen>