<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/white_corner_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/deldlg_tv_title"
        android:layout_width="match_parent"
        android:layout_height="42.0dip"
        android:gravity="center"
        android:singleLine="true"
        android:background="@color/title_bg_color"
        android:text="@string/tip_title"
        android:textColor="@color/white"
        android:textSize="16.0sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dip"
        android:background="@color/line_color" />

    <TextView
        android:id="@+id/deldlg_tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="74.0dip"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip"
        android:text="@string/xml_dialog_delete_info"
        android:textColor="#AA000000"
        android:textSize="16.0sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="#C1C1C1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40.0dip"
        android:layout_gravity="center_horizontal" >

        <Button
            android:id="@+id/deldlg_btn_positive"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/item_white_bg_selector"
            android:singleLine="true"
            android:text="@string/xml_dialog_delete_positive"
            android:textColor="@color/title_bg_color"
            android:textSize="16.0dip" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:background="#C1C1C1" />

        <Button
            android:id="@+id/deldlg_btn_negative"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/item_white_bg_selector"
            android:singleLine="true"
            android:text="@string/xml_dialog_delete_negative"
            android:textColor="@color/title_bg_color"
            android:textSize="16.0dip" />
    </LinearLayout>

</LinearLayout>