<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#f8f8f8"
              android:orientation="vertical">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/share_qq_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <cn.com.pyc.drm.widget.HighlightImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share_qq"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/share_to_qq"
                android:textColor="#7C7C7C"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_wechat_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <cn.com.pyc.drm.widget.HighlightImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share_wechat"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/share_to_wechat"
                android:textColor="#7C7C7C"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_weibo_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <cn.com.pyc.drm.widget.HighlightImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share_weibo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/share_to_sina_weibo"
                android:textColor="#7C7C7C"
                android:textSize="14sp"/>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/share_qzone_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <cn.com.pyc.drm.widget.HighlightImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share_qzone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/share_to_qzone"
                android:textColor="#7C7C7C"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_wechat_friends_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <cn.com.pyc.drm.widget.HighlightImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share_friends"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/share_to_wechat_friends"
                android:textColor="#7C7C7C"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_link_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <cn.com.pyc.drm.widget.HighlightImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share_link"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/share_to_link"
                android:textColor="#7C7C7C"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.4dp"
        android:background="@color/line_color"/>

    <TextView
        android:id="@+id/share_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_alpha_bg_selector"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/close"
        android:textColor="#5F5F5F"
        android:textSize="18sp"/>

</LinearLayout>