<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/white_corner_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_user_title"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@color/title_bg_color"
        android:gravity="center"
        android:text="@string/tip_title"
        android:textColor="@color/white"
        android:textSize="16.0sp" />

    <TextView
        android:id="@+id/dialog_user_lation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:textColor="#345"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/dialog_user_sublation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textColor="#aaaaaa"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginTop="15dp"
        android:background="#C1C1C1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dialog_user_positive_text"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/item_white_bg_selector"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/title_bg_color"
            android:textSize="16sp" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="#C1C1C1" />

        <TextView
            android:id="@+id/dialog_user_negative_text"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/item_white_bg_selector"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/title_bg_color"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>